--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^3.3.7",
     "express": "^4.15.3",
     "truffle-contract": "^2.0.1",
+    "uuid": "^3.1.0",
     "web3": "^0.19.1"
   },
   "devDependencies": {},
