--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "promise": "^8.0.1",
     "request": "^2.81.0",
     "truffle-contract": "^2.0.1",
     "uuid": "^3.1.0",
