--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "promise": "^8.0.1",
     "request": "^2.81.0",
     "truffle-contract": "^2.0.1",
+    "truffle-hdwallet-provider": "0.0.5",
     "uuid": "^3.1.0",
     "web3": "^0.19.1"
   },
